[package]
name = "copy-asyncstd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## crates.io    https://crates.io/search
regex = "^1.9"
lazy_static = "^1"
chrono = "^0.4"

async-std = "^1"
futures = "^0.3"

# tokio = { version = "^1", features = ["full"] }
# once_cell = "^1.18"
